--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "vercel-build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "echo Postinstall: ensure Tailwind deps are installed"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -15,6 +16,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "tailwindcss": "^3.4.8",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   }
 }
